@@ -5,6 +5,8 @@ xxx, S3QL 0.22
 
   * The sftp backend is now significantly faster, thanks to skyang2009
     for the patch.
+    
+  * s3qlctrl can now change the cache size of a mounted file system.
 
 2010-08-09, S3QL 0.21
 
